Refactor ConsensusFormation and CrossNodeIntegration for improved node discovery and data synchronization handling in processing logic